syntax = "proto2";

package io.grpc;
option java_package = "io.grpc.examples.proto";
option java_multiple_files = true;
option java_outer_classname = "KeyValues";

message CreateRequest {
  optional bytes key = 1;
  optional bytes value = 2;
}

message CreateResponse {
}

message RetrieveRequest {
  optional bytes key = 1;
}

message RetrieveResponse {
  optional bytes value = 1;
}

message UpdateRequest {
  optional bytes key = 1;
  optional bytes value = 2;
}

message UpdateResponse {
}

message DeleteRequest {
  optional bytes key = 1;
}

message DeleteResponse {
}

service KeyValueService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Retrieve(RetrieveRequest) returns (RetrieveResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}